--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="small-menu">
         <div class="hamburger-menu">
-            <span class="hamburger-list"><img src="/web/images/menu.png"></span>
+            <span class="hamburger-list"><img src="web/images/menu.png"></span>
         </div>
         <div class="small-block-search">
             <input class="input-text" type="text" placeholder="Zoek...">
@@ -45,9 +45,9 @@
             </button>
         </div>
         <div class="small-phone">
-            <img src="/web/images/phone1.png">
+            <img src="web/images/phone1.png">
             <div class="small-cart">
-                <img src="/web/images/cart-outline1.png">
+                <img src="web/images/cart-outline1.png">
                 <span class="cart-mount">0</span>
             </div>
         </div>
@@ -144,7 +144,7 @@
 <div class="main-container container">
     <div class="product-page">
         <div class="product-image">
-            <img src="../web/images/Sikkens_Rubbol_XD_High_Gloss.png">
+            <img src="web/images/Sikkens_Rubbol_XD_High_Gloss.png">
             <div class="shipping-information">
                 <span>Voor 21:30 uur besteld, dezelfde werkdag verstuud.</span>
             </div>
@@ -219,7 +219,7 @@
                                    onClick="this.checked=!this.isChecked;"
                                    name="myradio" value="0">
                             <span class="checkmark"></span>
-                            <div class="color-block"><img src="../web/images/Color.png"></div>
+                            <div class="color-block"><img src="web/images/Color.png"></div>
                             <span class="name">0,5 Liter Kluer</span>
                         </div>
                         <div class="price-normal"><span class="price">45,90</span></div>
@@ -235,7 +235,7 @@
                                    onClick="this.checked=!this.isChecked;"
                                    name="myradio" value="0">
                             <span class="checkmark"></span>
-                            <div class="color-block"><img src="../web/images/White.png"></div>
+                            <div class="color-block"><img src="web/images/White.png"></div>
                             <span class="name">1,0 Liter Kluer</span>
                         </div>
                         <div class="price-normal"><span class="price">79,55</span></div>
@@ -251,7 +251,7 @@
                                    onClick="this.checked=!this.isChecked;"
                                    name="myradio" value="0">
                             <span class="checkmark"></span>
-                            <div class="color-block"><img src="../web/images/Color.png"></div>
+                            <div class="color-block"><img src="web/images/Color.png"></div>
                             <span class="name">1,0 Liter Kluer</span>
                         </div>
                         <div class="price-normal"><span class="price">84,50</span></div>
@@ -267,7 +267,7 @@
                                    onClick="this.checked=!this.isChecked;"
                                    name="myradio" value="0">
                             <span class="checkmark"></span>
-                            <div class="color-block"><img src="../web/images/White.png"></div>
+                            <div class="color-block"><img src="web/images/White.png"></div>
                             <span class="name">2,5 Liter Kluer</span>
                         </div>
                         <div class="price-normal"><span class="price">191,15</span></div>
@@ -283,7 +283,7 @@
                                    onClick="this.checked=!this.isChecked;"
                                    name="myradio" value="0">
                             <span class="checkmark"></span>
-                            <div class="color-block"><img src="../web/images/Color.png"></div>
+                            <div class="color-block"><img src="web/images/Color.png"></div>
                             <span class="name">2,5 Liter Kluer</span>
                         </div>
                         <div class="price-normal"><span class="price">203,05</span></div>
@@ -369,7 +369,7 @@
                     <span class="u-partner">A-merken</span>
                 </div>
                 <div class="partner-rating">
-                    <img src="../web/images/Trustpilot.png">
+                    <img src="web/images/Trustpilot.png">
                 </div>
                 <div class="about-partner">
                     <span class="title-info-partner">
@@ -419,7 +419,7 @@
     <div class="footer-bottom">
         <div class="main-container">
             <div class="sponsor-image">
-                <img src="/web/images/Laag%2021.png">
+                <img src="web/images/Laag%2021.png">
             </div>
             <div class="privacy-police">
                 <span>&copy;2018</span><br>
