--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/web/scss/global.css">
+    <link rel="stylesheet" type="text/css" href="web/scss/global.css">
     <link rel="stylesheet" type="text/css" href="/web/scss/core/fonts.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,21 +17,20 @@
         <div class="header-logo">
             <img class="image-logo" src="web/images/logo.png">
         </div>
-        <div class="info-block">
-            <div class="icon sign-in">
-                <span>Inloggen</span>
-            </div>
-            <div class="icon message">
-            </div>
-            <div class="icon phone-number">
-                <span>+31 73 6233069</span>
-            </div>
-        </div>
         <div class="block-search">
             <input class="input-text" type="text" placeholder="Zoek...">
             <button class="search-button">
                 <i class="fas fa-search image-button"></i>
             </button>
+        </div>
+        <div class="info-block">
+            <div class="icon sign-in">
+                <a href="#">Inloggen</a>
+            </div>
+            <a href="#"><div class="icon message"></div></a>
+            <div class="icon phone-number">
+                <a href="#">+31 73 6233069</a>
+            </div>
         </div>
     </div>
     <div class="small-menu">
@@ -54,55 +53,56 @@
     </div>
     <div class="hamburger-menu-items">
         <div class="menu-item">
-            <a href="#"><span>verf</span></a>
+            <a href="#">verf</a>
         </div>
         <div class="menu-item">
-            <a href="#"><span>behang</span></a>
+            <a href="#">behang</a>
         </div>
         <div class="menu-item">
-            <a href="#"><span>benodigdheden</span></a>
+            <a href="#">benodigdheden</a>
         </div>
         <div class="menu-item">
-            <a href="#"><span>acties</span></a>
+            <a href="#">acties</a>
         </div>
         <div class="menu-item">
-            <a href="#"><span>merken</span></a>
+            <a href="#">merken</a>
         </div>
         <div class="menu-item">
-            <a href="#"><span>keuzehulp</span></a>
+            <a href="#">keuzehulp</a>
         </div>
     </div>
     <div class="header-links">
         <div class="main-container">
             <div class="header-link">
-                <a href="#"><span>verf</span></a>
+                <a href="#">verf</a>
             </div>
             <div class="header-link">
-                <a href="#"><span>behang</span></a>
+                <a href="#">behang</a>
             </div>
             <div class="header-link">
-                <a href="#"><span>benodigdheden</span></a>
+                <a href="#">benodigdheden</a>
             </div>
             <div class="header-link">
-                <a href="#"><span>acties</span></a>
+                <a href="#">acties</a>
             </div>
             <div class="header-link">
-                <a href="#"><span>merken</span></a>
+                <a href="#">merken</a>
             </div>
             <div class="header-link">
-                <a href="#"><span>keuzehulp</span></a>
+                <a href="#">keuzehulp</a>
             </div>
             <div class="header-top-tax-switch">
                 <div class="prices-incl-tax">
-                    <a href="#"><span>zakelijk</span></a>
+                    <a href="#">zakelijk</a>
                 </div>
                 <div class="prices-excl-tax">
-                    <a href="#"><span>particulier</span></a>
+                    <a href="#">particulier</a>
                 </div>
-                <div class="shop-cart">
-                    <a href="#"></a>
-                    <span class="cart-mount">0</span>
-                </div>
+                <a href="#">
+                    <div class="shop-cart">
+                        <span class="cart-mount">0</span>
+                    </div>
+                </a>
                 <div class="chevron-down">
                     <span class="chevron-bottom"></span>
                 </div>
@@ -120,22 +120,17 @@
         <div class="main-container">
             <div class="breadcrumbs-links">
                 <span>
-                    <span class="chevron-right"></span>
                     <a href="#" class="breadcrumbs-link">producten</a>
                 </span>
                 <span>
-                    <span class="chevron-right"></span>
                     <a href="#" class="breadcrumbs-link">houtverf</a>
                 </span>
                 <span>
-                    <span class="chevron-right"></span>
                     <a href="#" class="breadcrumbs-link">hoogglans verf voor hount</a>
                 </span>
                 <span>
-                    <span class="chevron-right"></span>
                     <a href="#" class="breadcrumbs-link">Sikkens hoogglans houtverf</a>
                 </span>
-                <span class="chevron-right"></span>
                 <span class="breadcrumbs-link">Sikkens Rubbol XD high Gloss</span>
             </div>
         </div>
@@ -149,7 +144,7 @@
                 <span>Voor 21:30 uur besteld, dezelfde werkdag verstuud.</span>
             </div>
         </div>
-        <div class="prices-product">
+        <div class="prices-product clearfix">
             <h1 class="product-title">Sikkens Rubbol XD High Gloss</h1>
             <div class="product-name">
                 <span>Voorheen: Sikkens Rubbol XD Gloss</span>
@@ -305,11 +300,9 @@
                         <input class="color-input-quantity color-input-settings" type="text">
                         <a href="#" class="color-button-text"><i class="fas fa-times"></i></a>
                     </div>
-                    <div class="add-to-cart">
-                        <button class="add-to-cart-button">
-                            <span class="add-to-button-text">voeg toe aan winkelwagen</span>
-                        </button>
-                    </div>
+                    <button class="add-to-cart-button">
+                        <span class="add-to-button-text">voeg toe aan winkelwagen</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -357,10 +350,7 @@
                 RAL 9010 is een mengkleur en verschilt van standaard wit<br>
                 Product op kleur valt buiten het recht van retour<br>
             </span>
-            <a href="#" class="button-go-back">
-                <i class="fas fa-chevron-left"></i>
-                <span class="button-go-back-text">terug naar het productoverzicht</span>
-            </a>
+            <a href="#" class="button-go-back">terug naar het productoverzicht</a>
             <div class="our-partners">
                 <div class="your-partner">
                     <span class="title-u-partner">Uw partner in:</span>
